--- a/client/src/containers/Store.css
+++ b/client/src/containers/Store.css
@@ -19,3 +19,24 @@
 .grid-item1:hover {
     background-color: rgb(235, 235, 235);
 }
+
+.store-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 300px;
+    border: 1px solid rgba(5, 54, 0, 0.8);
+}
+
+.store-header .quantics{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+img.store-photo{
+    border-radius: 50%;
+    padding-right: 5px;
+}
