--- a/client/src/components/SignIn.css
+++ b/client/src/components/SignIn.css
@@ -1,11 +1,11 @@
-button {
+button{
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    transition-duration: 0.4s;
+    transition-duration: 300ms;
     cursor: pointer;
     background-color: white;
     color: black;
