--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -1,8 +1,8 @@
 .nav-frame{
     position: sticky;
     top: 0;
-    padding: 20px;
-    background-color: rgb(236, 236, 236);
+    padding: 10px;
+    background-color: rgba(236, 236, 236, 0.8);
     display: flex;                 
     justify-content: space-between; 
     align-items: center;
@@ -74,16 +74,16 @@ svg.bars:hover{
 .menu{
     display: flex;
     align-items: center;
+    background-color: rgba(236, 236, 236, 0.0);
 }
 
 .menu a{
-    background-color: rgb(236, 236, 236);
+    background-color: rgba(236, 236, 236, 0.0);
 }
 
 .menu img:hover{
     transform: scale(1.05);
     cursor: pointer;
-    background-color: rgb(236, 236, 236);
 }
 
 .side-menu-on{
