--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -1,13 +1,14 @@
-/* .logo{
-    animation: world 2s linear infinite;
-}
-
-@keyframes world {
-    0% { transform: translate(0px,0px) }
-    25% { transform: translate(1000px) } 
-    100% { transform: translate(0px,0px) }
-} */
-
 .section{
     padding: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+    .lander{
+        max-width: 500px;
+    }
+
+    .lander img{
+        width: 450px;
+        height: auto;
+    }
 }
