rounded design update

--- a/client/src/components/ItemCard.css
+++ b/client/src/components/ItemCard.css
@@ -1,6 +1,7 @@
 .card{
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(5, 54, 0, 0.8);
+    border: 1px solid rgba(150, 150, 150, 0.8);
+    border-radius: 30px;
     padding: 10px 0;
     font-size: 30px;
     text-align: center;
@@ -48,6 +49,7 @@ h3{
 .card .image{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(85, 85, 85);
     float: right;
@@ -56,6 +58,7 @@ h3{
 .card .video{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(89, 0, 255);
     float: right;
@@ -64,6 +67,7 @@ h3{
 .card .music{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(226, 31, 151);
     float: right;
@@ -72,6 +76,7 @@ h3{
 .card .art{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(255, 170, 95);
     float: right;
@@ -80,6 +85,7 @@ h3{
 .card .story{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(21, 23, 141);
     float: right;
@@ -88,6 +94,7 @@ h3{
 .card .model{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(197, 38, 38);
     float: right;
@@ -96,6 +103,7 @@ h3{
 .card .game{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(46, 187, 116);
     float: right;
@@ -104,6 +112,7 @@ h3{
 .card .link{
     border: 1px solid rgba(5, 54, 0, 0.8);
     border-right: 0;
+    border-radius: 30px;
     padding: 10px;
     color: rgb(119, 95, 255);
     float: right;
