--- a/client/src/components/LockedItem.css
+++ b/client/src/components/LockedItem.css
@@ -1,6 +1,7 @@
-.card{
+.locked-card{
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(5, 54, 0, 0.8);
+    box-shadow: 0 0 3pt 2pt rgb(173, 201, 158);
+    border-radius: 30px;
     padding: 10px 0;
     font-size: 30px;
     text-align: center;
@@ -8,7 +9,7 @@
     margin: 20px;
 }
 
-.card button{
+.locked-card button{
     padding: 10px;
     text-align: center;
     text-decoration: none;
@@ -33,7 +34,7 @@ img.pp{
     height: 40px;
 }
 
-.card .top-row{
+.locked-card .top-row{
     padding-left: 15px;
     display: flex;
     flex-direction: row;
@@ -45,74 +46,58 @@ h3{
     margin: 0;
 }
 
-.card .image{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .image{
     padding: 10px;
     color: rgb(85, 85, 85);
     float: right;
 }
 
-.card .video{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .video{
     padding: 10px;
     color: rgb(89, 0, 255);
     float: right;
 }
 
-.card .music{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .music{
     padding: 10px;
     color: rgb(226, 31, 151);
     float: right;
 }
 
-.card .art{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .art{
     padding: 10px;
     color: rgb(255, 170, 95);
     float: right;
 }
 
-.card .story{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .story{
     padding: 10px;
     color: rgb(21, 23, 141);
     float: right;
 }
 
-.card .model{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .model{
     padding: 10px;
     color: rgb(197, 38, 38);
     float: right;
 }
 
-.card .game{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .game{
     padding: 10px;
     color: rgb(46, 187, 116);
     float: right;
 }
 
-.card .link{
-    border: 1px solid rgba(5, 54, 0, 0.8);
-    border-right: 0;
+.locked-card .link{
     padding: 10px;
     color: rgb(119, 95, 255);
     float: right;
 }
 
-.card .heart{
+.locked-card .heart{
     color: rgb(255, 123, 200);
 }
 
-.card .comment{
+.locked-card .comment{
     color: rgb(119, 178, 255);
 }
