--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #ffffff;
+  background-color: whitesmoke;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
