--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -112,6 +112,7 @@ svg.bars:hover{
     top: 0;
     left: 0;
     transition: 250ms;
+    border-right: 1pt solid rgb(160, 192, 150);
 }
 
 .side-menu-on a{
