--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: whitesmoke;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,4 +31,10 @@ button{
 button:hover{
   background-color: rgb(119, 153, 101);
   color: white;
+}
+
+.footer{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: whitesmoke;
 }
