--- a/client/src/containers/Store.css
+++ b/client/src/containers/Store.css
@@ -1,13 +1,13 @@
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    background-color: whitesmoke;
+    background-color: white;
     padding: 10px;
     color: rgb(5, 54, 0);
 }
 
 .grid-item1 {
-    background-color: whitesmoke;
+    background-color: white;
     box-shadow: 0 0 3pt 2pt rgb(173, 201, 158);
     border-radius: 30px;
     padding: 20px;
@@ -54,7 +54,7 @@ img.store-photo{
     .grid-container {
         display: grid;
         grid-template-columns: auto;
-        background-color: whitesmoke;
+        background-color: white;
         padding: 10px;
         color: rgb(5, 54, 0);
     }
