--- a/client/src/components/CurrentBalance.css
+++ b/client/src/components/CurrentBalance.css
@@ -6,7 +6,7 @@
     right: 30px;
     z-index: 99;
     color:rgb(119, 153, 101);
-    box-shadow: 0 0 2pt 1pt rgb(133, 158, 119);
+    box-shadow: 0 0 6px 0 rgb(133, 158, 119);
     background-color: white;
     padding: 15px;
     border-radius: 10px;
