recently bought fix and new item button hide mobile

--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -131,6 +131,10 @@ svg.bars:hover{
         display: none;
     }
 
+    .newUploadButton{
+        display: none;
+    }
+
     /* moves navbar to bottom */
     /* .nav-frame{
         position: fixed;
