--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  color: rgb(5, 54, 0);
+  color: grey;
 }
 
 button{
@@ -24,15 +24,15 @@ button{
   font-size: 16px;
   transition-duration: 300ms;
   cursor: pointer;
-  background-color: white;
-  color:rgb(119, 153, 101);
-  border: 2px solid rgba(183, 219, 163);
+  background-color: whitesmoke;
+  color:grey;
+  border: none;
   border-radius: 50px;
 }
 
 button:hover{
-  background-color: rgb(119, 153, 101);
-  color: white;
+  background-color: rgb(218, 218, 218);
+  color: grey;
 }
 
 a{
