--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -6,35 +6,22 @@
     width: 100%;
 }
 
-.divider{
-    width: 100%;
-    height: 3px;
-    background-color: rgb(183, 219, 163);
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.section{
+.top-section{
     padding: 30px;
     width: 90%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    height: 80vh;
+    background-image: url("../assets/lightworld.svg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.section img.l{
-    height: auto;
-    width: 200px;
-}
-
-.section img.items{
-    height: auto;
-    width: 600px;
-}
-
-.section .left{
-    max-width: 500px;
+.learnjoin{
+    display: flex;
+    flex-direction: row;
 }
 
 .cards{
@@ -43,8 +30,6 @@
     justify-content: center;
     align-items:flex-start;
 }
-
-
 
 @media only screen and (max-width: 600px) {
     .lander{
@@ -56,21 +41,6 @@
     .lander img.logo{
         width: 90vw;
         height: auto;
-    }
-
-    .section{
-        flex-direction: column;
-        width: 300px;
-    }
-
-    .section img.items{
-        height: auto;
-        width: 90vw;
-    }
-
-    .section img.l{
-        height: auto;
-        width: 200px;
     }
 
     .cards{
