--- a/client/src/components/Loading.css
+++ b/client/src/components/Loading.css
@@ -1,9 +1,9 @@
 .loader {
-    border: 5px solid #f3f3f3;
+    border: 3px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 6px solid #005807;
-    width: 30px;
-    height: 30px;
+    border-top: 3px solid gray;
+    width: 20px;
+    height: 20px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
   }
