--- a/client/src/components/LockedItem.css
+++ b/client/src/components/LockedItem.css
@@ -2,7 +2,7 @@
     min-width: 300px;
     max-width: 400px;
     background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 3px 6px 0 rgb(173, 201, 158);
+    box-shadow: 0 2px 4px 0 lightgray;
     border-radius: 30px;
     padding: 10px 0;
     font-size: 30px;
