--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -43,6 +43,19 @@
         height: auto;
     }
 
+    .top-section{
+        padding: 30px;
+        width: 80vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 80vh;
+        background-image: url("../assets/lightworld.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
     .cards{
         justify-content: center;
         align-items: center;
