--- a/client/src/containers/SignUpPage.css
+++ b/client/src/containers/SignUpPage.css
@@ -1,3 +1,10 @@
+.sign-up-container{
+    margin: 1rem;
+    padding: 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 6px 0 gray;
+}
+
 ol{
     text-align: left;
 }
