--- a/client/src/containers/Leaderboards.css
+++ b/client/src/containers/Leaderboards.css
@@ -1,8 +1,8 @@
-table, th, td {
+/*table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
 
 th, td {
     padding: 15px;
-}
+}*/
