--- a/client/src/containers/NewItem.css
+++ b/client/src/containers/NewItem.css
@@ -1,3 +1,26 @@
+.new-item-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.new-item-category-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.new-item-category-list a{
+    padding: 5px 10px;
+    border-radius: 30px;
+}
+
+.new-item-category-list a:hover{
+    background-color: whitesmoke;
+}
+
 .form-section{
     display: flex;
     flex-direction: column;
