--- a/client/src/containers/Leaderboards.css
+++ b/client/src/containers/Leaderboards.css
@@ -1,8 +1,12 @@
-/*table, th, td {
+.leaderboard table, .leaderboard th, .leaderboard td {
     border: 1px solid black;
     border-collapse: collapse;
 }
 
-th, td {
+.leaderboard th, .leaderboard td {
     padding: 15px;
-}*/
+}
+
+.leaderboard a:hover{
+    color: green;
+}
