TransactionForm can Set/Clear
transaction via its ActionButtons. ChatAttachmentPopper will be highlighted when a Transaction is set.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,10 @@ button:hover{
   color: grey;
 }
 
+button.highlight{
+  background-color: lightgreen;
+}
+
 a{
   color: rgb(5,54,0);
   text-decoration: none;
