share button styling and error fixes

--- a/client/src/components/ItemCard.css
+++ b/client/src/components/ItemCard.css
@@ -27,6 +27,13 @@
     background-color: whitesmoke;
 }
 
+.item-card-buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .card a:hover{
     color: green;
 }
