--- a/client/src/components/Comment.css
+++ b/client/src/components/Comment.css
@@ -14,3 +14,21 @@
 .comment p{
     color: black;
 }
+
+button.reply-button{
+    font-size: 15px;
+}
+
+button.reply-button:hover{
+    color: black;
+    background-color: white;
+}
+
+button.hide-replies-btn{
+    font-size: 15px;
+}
+
+button.hide-replies-btn:hover{
+    color: black;
+    background-color: white;
+}
