authState determines justification
and other css properties that differentiate sent vs. received messages.
Also fixed a bug with the css for .message-row. Still needs tweaking.

--- a/client/src/components/ChatBubble.css
+++ b/client/src/components/ChatBubble.css
@@ -1,3 +1,18 @@
+.message-row {
+  border: black thin dashed;
+  width: 800px;
+}
+
+.received * {
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.sent * {
+  justify-content: flex-end;
+  text-align: right;
+}
+
 .message-line {
   display: flex;
 }
