--- a/client/src/containers/Leaderboards.css
+++ b/client/src/containers/Leaderboards.css
@@ -1,3 +1,7 @@
+.leaderboard{
+    padding-bottom: 100px;
+}
+
 .leaderboard table, .leaderboard th, .leaderboard td {
     border: 1px solid black;
     border-collapse: collapse;
